# provero

./: .asf.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backport.yaml  ci.yaml  codeql.yaml  constraints.yaml  docs.yaml  labeler.yaml  pr-size.yaml  publish.yaml  stale.yaml
aql-spec/: schema.json  spec.md
assay-airflow/: pyproject.toml
assay-airflow/src/provero/airflow/: __init__.py  decorators.py  operators.py
assay-core/: pyproject.toml
assay-core/.assay/: results.db
assay-core/.assay/reports/: assay.html
assay-core/src/provero/: __init__.py  schema.json
assay-core/src/provero/alerts/: __init__.py  models.py  sender.py
assay-core/src/provero/anomaly/: checks.py  detectors.py  models.py
assay-core/src/provero/checks/: completeness.py  custom.py  freshness.py  registry.py  uniqueness.py  validity.py  volume.py
assay-core/src/provero/cli/: main.py
assay-core/src/provero/connectors/: base.py  dataframe.py  duckdb.py  factory.py  postgres.py
assay-core/src/provero/contracts/: diff.py  models.py  validator.py
assay-core/src/provero/core/: compiler.py  engine.py  optimizer.py  profiler.py  results.py  sql.py
assay-core/src/provero/reporting/: html.py
assay-core/src/provero/reporting/templates/: report.html
assay-core/src/provero/store/: sqlite.py
assay-core/tests/: conftest.py  test_airflow.py  test_alerts.py  test_anomaly.py  test_anomaly_checks.py  test_checks.py  test_ci_hygiene.py  test_cli.py  test_compiler.py  test_connector_protocol.py  test_contracts.py  test_dataframe.py  test_e2e.py  test_engine.py  test_factory.py  test_latency_check.py  test_optimizer.py  test_optional_deps.py  test_plugin_system.py  test_profiler.py  test_reporting.py  test_results.py  test_schema.py  test_security.py  test_sql.py  test_store.py  test_store_schema.py  test_type_check.py
constraints/: constraints-3.11.txt  constraints-3.12.txt  constraints-3.13.txt
docs/: ARCHITECTURE.md  RELEASE_PROCESS.md  airflow.md  anomaly-detection.md  checks.md  cli.md  configuration.md  connectors.md  data-contracts.md  demo.tape  flyte.md  getting-started.md  index.md
docs/api/: alerts.md  anomaly.md  checks.md  compiler.md  connectors.md  contracts.md  engine.md  index.md  optimizer.md  profiler.md  reporting.md  results.md  sql.md  store.md
docs/stylesheets/: extra.css
examples/: flyte_workflow.py
examples/ecommerce/: provero.yaml  seed_data.py
examples/quickstart/: assay.yaml  orders.csv  provero.yaml
newsfragments/: 1.misc.md  20.feature.md  21.feature.md  23.feature.md  24.feature.md  25.feature.md  26.feature.md  27.feature.md  32.feature.md  34.feature.md  44.feature.md  45.feature.md  48.feature.md  55.feature.md  72.feature.md  85.bugfix.md  86.bugfix.md  87.bugfix.md  88.feature.md  9.doc.md  93.bugfix.md  94.bugfix.md  95.bugfix.md  all-fixes.bugfix.md  api-docs.doc.md  check-logic.bugfix.md  cli-connectors.bugfix.md  code-review.bugfix.md  docs-guides.doc.md  docs-urls.bugfix.md  package-polish.bugfix.md  pre-release.bugfix.md  remaining-fixes.bugfix.md  review-round2.bugfix.md  review-round3.bugfix.md
provero-airflow/: pyproject.toml
provero-airflow/src/provero/airflow/: __init__.py  decorators.py  operators.py  provider.yaml
provero-core/: pyproject.toml
provero-core/src/provero/: __init__.py  schema.json
provero-core/src/provero/alerts/: __init__.py  sender.py
provero-core/src/provero/anomaly/: checks.py  detectors.py  models.py
provero-core/src/provero/checks/: completeness.py  custom.py  freshness.py  referential.py  registry.py  uniqueness.py  validity.py  volume.py
provero-core/src/provero/cli/: main.py  utils.py
provero-core/src/provero/cli/commands/: contract.py  history.py  init.py  profile.py  run.py  validate.py  version.py
provero-core/src/provero/connectors/: base.py  duckdb.py  factory.py  postgres.py
provero-core/src/provero/contracts/: diff.py  models.py  validator.py
provero-core/src/provero/core/: compiler.py  engine.py  optimizer.py  profiler.py  results.py  sql.py
provero-core/src/provero/exporters/: dbt.py
provero-core/src/provero/importers/: __init__.py  soda.py
provero-core/src/provero/reporting/: html.py
provero-core/src/provero/store/: __init__.py  sqlite.py
provero-core/tests/: conftest.py  test_airflow.py  test_alerts.py  test_anomaly.py  test_anomaly_checks.py  test_check_logic_fixes.py  test_checks.py  test_cli.py  test_compiler.py  test_contracts.py  test_dataframe.py  test_dbt_export.py  test_e2e.py  test_e2e_realistic.py  test_email_check.py  test_engine.py  test_factory.py  test_flyte.py  test_mysql_connector.py  test_optimizer.py  test_plugin_system.py  test_referential.py  test_reporting.py  test_results.py  test_schema.py  test_soda_import.py  test_sqlite_connector.py  test_store.py  test_store_schema.py  test_type_check.py  test_watch.py
provero-flyte/: pyproject.toml
provero-flyte/src/provero/flyte/: __init__.py  deck.py  decorators.py  task.py  type_transformer.py
src/assay/: __init__.py
src/assay/checks/: completeness.py  custom.py  freshness.py  registry.py  uniqueness.py  validity.py  volume.py
src/assay/cli/: main.py
src/assay/connectors/: base.py  duckdb.py
src/assay/core/: compiler.py  engine.py  results.py
tests/: test_checks.py  test_compiler.py
