[project]
name = "apache-provero"
version = "0.1.0-dev"
description = "Provero workspace root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "assay-core",
    "assay-airflow",
]

[tool.uv.sources]
provero = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["assay-core/src", "assay-airflow/src"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["assay-core/tests"]
pythonpath = ["assay-core/src"]
