[project]
name = "apache-provero"
version = "0.1.0-dev"
description = "Provero workspace root"
requires-python = ">=3.11"

dependencies = [
    "provero",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.20",
]

[tool.uv.workspace]
members = [
    "provero-core",
    "provero-airflow",
]

[tool.uv.sources]
provero = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["provero-core/src", "provero-airflow/src"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["provero-core/tests"]
pythonpath = ["provero-core/src"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.20",
]
