[project]
name = "apache-provero"
version = "0.1.0-dev"
description = "Provero workspace root"
requires-python = ">=3.11"

dependencies = [
    "provero",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.20",
]

[tool.uv.workspace]
members = [
    "provero-core",
    "provero-airflow",
    "provero-flyte",
]

[tool.uv.sources]
provero = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["provero-core/src", "provero-airflow/src", "provero-flyte/src"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.pytest.ini_options]
testpaths = ["provero-core/tests"]
pythonpath = ["provero-core/src"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.20",
    "towncrier>=24.7",
]

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGELOG.md"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
