[project]
name = "provero-airflow"
version = "0.1.1"
description = "Provero Airflow provider: ProveroCheckOperator and decorators"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Provero Contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Apache Airflow",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "provero>=0.0.1",
    "apache-airflow>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/provero-org/provero"
Repository = "https://github.com/provero-org/provero"
Issues = "https://github.com/provero-org/provero/issues"
Documentation = "https://provero.org/docs"
Changelog = "https://github.com/provero-org/provero/blob/main/CHANGELOG.md"

[project.entry-points."apache_airflow_provider"]
provider-info = "provero.airflow.__init__:get_provider_info"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/provero/airflow/**/*.py", "src/provero/airflow/**/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/provero"]
