[project]
name = "provero-flyte"
version = "0.2.0"
description = "Provero Flyte plugin: run quality checks as Flyte tasks"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Provero Contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "provero>=0.2.0,<1.0",
    "flytekit>=1.11",
    "pandas>=1.5",
]

[project.optional-dependencies]
polars = [
    "polars>=0.19",
]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/provero-org/provero"
Repository = "https://github.com/provero-org/provero"
Issues = "https://github.com/provero-org/provero/issues"
Documentation = "https://provero-org.github.io/provero/"
Changelog = "https://github.com/provero-org/provero/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/provero/flyte/**/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/provero"]
